# hosting-script

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml  todo.txt
files/: server_proxy_init  uwsgi.ini  uwsgi.service_init
src/: access_point.py  config.py  main.py  pi-ap.py  util.py
