[tool.poetry]
name = "hosting_script"
version = "0.1.0"
description = "Automate hosting a Flask (for now) web server on a Raspberri Pi with an access point."
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]
packages = [ {include = "src"} ]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
pydantic = "^1.9.0"
print-color = "^0.4.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hosting_script = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
